--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dic",
     "injector"
   ],
-  "homepage": "https://github.com/Rezdy/rsdi",
+  "homepage": "https://github.com/Rezdy/dependency-injection",
   "author": "Sergey Radzishevskii <radzserg@gmail.com>",
   "license": "ISC",
   "devDependencies": {
