Removes accidentally added rezdy references

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rezdy/dependency-injection",
+  "name": "rsdi",
   "version": "1.0.0",
   "description": "dependency injection container",
   "scripts": {
@@ -14,7 +14,7 @@
     "dic",
     "injector"
   ],
-  "homepage": "https://github.com/Rezdy/dependency-injection",
+  "homepage": "https://github.com/radzserg/rsdi",
   "author": "Sergey Radzishevskii <radzserg@gmail.com>",
   "license": "ISC",
   "devDependencies": {
