--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,21 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "./dist/",
+    "module": "es6",
+    "target": "es6",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es5",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "allowJs": false,
-    "lib": ["dom", "dom.iterable", "esnext"]
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": "src",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ]
+    }
   },
   "include": ["src", "declarations.d.ts"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules"]
 }
