--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
+    "strict": true,
     "target": "es5",
     "esModuleInterop": true,
     "moduleResolution": "node",
