--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsdi",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "dependency injection container",
   "scripts": {
     "test": "jest",
@@ -17,11 +17,10 @@
   "homepage": "https://github.com/radzserg/rsdi",
   "author": "Sergey Radzishevskii <radzserg@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "jest": "^25.5.4",
-    "ts-jest": "^25.3.1",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {}
+  "dependencies": {
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
+  }
 }
