--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dependency injection container",
   "scripts": {
     "test": "jest",
+    "format": "prettier 'src/**/*.ts' --write",
     "build": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json",
     "copy:package": "cp README.md package.json dist/",
     "deploy": "npm run build && npm run copy:package && npm publish dist"
@@ -22,5 +23,10 @@
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.4.1"
   }
 }
