--- a/package.json
+++ b/package.json
@@ -28,15 +28,13 @@
   "lint-staged": {
     "src/**/*.ts": "prettier --write --ignore-unknown"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5",
     "husky": "^7.0.2",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   }
 }
