--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsdi",
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0",
   "description": "Simple dependency injection container for JavaScript/TypeScript",
   "scripts": {
     "test": "jest",
