--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "rsdi",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Simple dependency injection container for JavaScript/TypeScript",
   "scripts": {
     "test": "jest",
     "format": "prettier 'src/**/*.ts' --write",
     "build": "tsc",
-    "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/"
+    "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "keywords": [
     "dependency injection",
@@ -20,11 +22,6 @@
   "homepage": "https://github.com/radzserg/rsdi",
   "author": "Sergey Radzishevskii <radzserg@gmail.com>",
   "license": "ISC",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "src/**/*.ts": "prettier --write --ignore-unknown"
   },
@@ -32,7 +29,7 @@
     "@types/jest": "^26.0.23",
     "husky": "^7.0.2",
     "jest": "^27.0.6",
-    "lint-staged": "^11.1.2",
+    "lint-staged": "^11.2.0",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
