--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Simple dependency injection container for JavaScript/TypeScript",
     "scripts": {
         "test": "jest",
+        "test:types": "jest -c jest.config.tsd.js",
         "format": "prettier 'src/**/*.ts' --write",
         "build": "tsc",
         "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
@@ -25,12 +26,15 @@
         "src/**/*.ts": "prettier --write --ignore-unknown"
     },
     "devDependencies": {
+        "@tsd/typescript": "^4.6.4",
         "@types/jest": "^26.0.23",
         "husky": "^7.0.2",
         "jest": "^27.0.6",
+        "jest-runner-tsd": "^3.0.0",
         "lint-staged": "^11.2.0",
         "prettier": "^2.4.1",
         "ts-jest": "^27.0.3",
+        "tsd": "^0.20.0",
         "typescript": "^4.3.5"
     }
 }
