--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     },
     "devDependencies": {
         "@tsd/typescript": "^4.6.4",
-        "@types/jest": "^26.0.23",
+        "@types/jest": "^27.5.0",
         "husky": "^7.0.2",
-        "jest": "^27.0.6",
+        "jest": "^28.0.3",
         "jest-runner-tsd": "^3.0.0",
         "lint-staged": "^11.2.0",
         "prettier": "^2.4.1",
-        "ts-jest": "^27.0.3",
+        "ts-jest": "^28.0.1",
         "tsd": "^0.20.0",
-        "typescript": "^4.3.5"
-    }
+        "typescript": "^4.6.4"
+    },
+    "dependencies": {}
 }
