--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "format": "prettier 'src/**/*.ts' --write",
     "build": "tsc",
     "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "lint": "yarn eslint src/**/**.ts",
+    "prettify": "prettier --write --ignore-unknown"
   },
   "keywords": [
     "dependency injection",
@@ -23,7 +25,7 @@
   "author": "Sergey Radzishevskii <radzserg@gmail.com>",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts": "prettier --write --ignore-unknown"
+    "src/**/*.ts": ["prettier --write --ignore-unknown", "eslint"]
   },
   "devDependencies": {
     "@tsd/typescript": "^4.6.4",
