--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "ts-injecty",
-  "version": "1.0.9",
+  "version": "1.0.2",
   "description": "dependency injection container",
   "scripts": {
-    "test": "jest --watch",
-    "build": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json",
-    "copy:package": "cp README.md package.json dist/",
-    "deploy": "npm run build && npm run copy:package && npm publish dist"
+    "test": "jest",
+    "format": "prettier 'src/**/*.ts' --write",
+    "build": "tsc",
+    "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
+    "pre-commit": "lint-staged",
+    "deploy": "npm publish --access public"
   },
   "keywords": [
+    "dependency injection",
     "dependency",
     "injection",
-    "dic",
-    "injector"
+    "ioc",
+    "container",
+    "javascript",
+    "typescript"
   ],
   "homepage": "https://github.com/damianpumar/rsdi",
   "author": "Damián Pumar <damianpumar@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "jest": "^25.5.4",
-    "ts-jest": "^26.4.4",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {}
+    "@types/jest": "^27.5.2",
+    "husky": "^7.0.2",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.2.0",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
+  }
 }
