✨ Improve linter and prettier

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "test": "jest",
     "format": "prettier 'src/**/*.ts' --write",
     "build": "tsc",
-    "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
     "pre-commit": "lint-staged",
-    "deploy": "cd ./dist && npm publish --access public"
+    "build-prod": "rm -Rf ./dist/* && NODE_ENV=production tsc --build tsconfig.json && cp README.md package.json dist/",
+    "minify": "minify-all-js ./dist",
+    "deploy": "cd ./dist && npm publish --access public",
+    "prepare": "husky install"
   },
   "keywords": [
     "dependency injection",
@@ -22,11 +24,15 @@
   "homepage": "https://github.com/damianpumar/rsdi",
   "author": "Damián Pumar <damianpumar@gmail.com>",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "prettier --write --ignore-unknown"
+  },
   "devDependencies": {
     "@types/jest": "^27.5.2",
-    "husky": "^7.0.2",
+    "husky": "^8.0.0",
     "jest": "^27.0.6",
     "lint-staged": "^11.2.0",
+    "minify-all-js": "^0.1.9",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
