--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "javascript",
     "typescript"
   ],
-  "homepage": "https://github.com/damianpumar/rsdi",
+  "homepage": "https://github.com/damianpumar/ts-injecty",
   "author": "Damián Pumar <damianpumar@gmail.com>",
   "license": "ISC",
   "lint-staged": {
