--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-injecty",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "dependency injection container",
   "scripts": {
     "test": "jest",
@@ -34,6 +34,7 @@
     "lint-staged": "^11.2.0",
     "minify-all-js": "^0.1.9",
     "prettier": "^2.4.1",
+    "tcr": "^0.5.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   }
